--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex justify-content-center">
+<!-- <div class="d-flex justify-content-center">
 <div class="card">
   <div class="card-header">
     <div class="card-title">
    <h1 class="card-text">Welcome Back</h1>
     </div>
   </div>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
-</div>
+
