--- a/src/app/core/component/login/login.component.html
+++ b/src/app/core/component/login/login.component.html
@@ -19,7 +19,7 @@
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required.</div>
-                        <div *ngIf="f.password.errors.minlength">Password length should be minimum 8 charecters.</div>
+                        <!-- <div *ngIf="f.password.errors.minlength">Password length should be minimum 8 charecters.</div> -->
                     </div>
                 </div>
                 <div class="form-group">
