--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<div class="card bg-orange footer col-12">
+    <div class="card-body">
+        <div class="card-title">
+            <p class="card-text text-white">All Rights Resevered</p>
+        </div>
+    </div>
+</div>
