--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="card bg-orange mb-3">
+        <div class="card-header">
+            <div class="card-title">
+                <h4 class="text-white ">Corporate Bank</h4>
+               
+            </div>
+        </div>
+    </div>
