apply-loan , json

--- a/src/app/core/component/loan/loan.component.html
+++ b/src/app/core/component/loan/loan.component.html
@@ -11,7 +11,7 @@
             <div class="d-flex justify-content-lg-center">
                 <div class="card col-lg-12">
                     <div class="card-body">
-                        <div class="form-group">
+                        <div class="form-group" >
                             <label for="firstName">Amount</label>
                             <input class="form-control" type="number" placeholder="Enter amount"
                                 formControlName="amount">
@@ -23,7 +23,7 @@
 
                         <div class="form-group">
                             <label for="usage">Usage</label>
-                            <input class="form-control" type="number" placeholder="Enter Usage" formControlName="usage">
+                            <input class="form-control" type="text" placeholder="Enter Usage" formControlName="usage">
                         </div>
 
                     </div>
@@ -52,13 +52,13 @@
                 <div class="card col-lg-12 col-md-12">
                     <div class="card-body">
                         <div class="form-group">
-                            <label for="organisation">Corportae Name</label>
+                            <label for="organisation">Corporate Name</label>
                             <input class="form-control" type="text" placeholder="Enter your Corporate name"
                                 formControlName="name">
                         </div>
                         <div class="form-group">
                             <label for="regNo">Commerical Age</label>
-                            <input class="form-control" type="text" placeholder="Enter your Commerical register"
+                            <input class="form-control" type="number" placeholder="Enter your Commerical register"
                                 formControlName="companyAge">
                         </div>
                         <div class="form-group">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="form-group">
                             <label for="regNo">Commerical Register</label>
-                            <input class="form-control" type="text" placeholder="Enter your Commerical register"
+                            <input class="form-control" type="number" placeholder="Enter your Commerical register"
                                 formControlName="regNo">
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form-group">
                             <label for="lastName">Last Name</label>
-                            <input class="form-control" type="number" placeholder="Enter your Last name"
+                            <input class="form-control" type="text" placeholder="Enter your Last name"
                                 formControlName="lastName">
                         </div>
                         <div class="form-group">
@@ -122,7 +122,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phoneNumber">Phone Number</label>
-                            <input class="form-control" type="text" placeholder="Enter your Phone number"
+                            <input class="form-control" type="number" placeholder="Enter your Phone number"
                                 formControlName="phoneNumber">
                         </div>
 
