added login link

--- a/src/app/core/component/dashboard/dashboard.component.html
+++ b/src/app/core/component/dashboard/dashboard.component.html
@@ -3,29 +3,7 @@
 
     <section class="jumbotron text-center">
             <div class="container">
-              <h1 class="jumbotron-heading">Dashboard Page</h1>
-              <!-- <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-              
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/">Home<small>(Site layout)</small></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/about">About<small>(Site layout)</small></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/login">Login Page<small>(No layout)</small></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/register">Register Page<small>(No layout)</small></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/dashboard">Dashboard<small>(App layout)</small></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/profile">Profile<small>(App layout)</small></a>
-                </li>
-              </ul> -->
+              <h1 class="jumbotron-heading">Welcome to Corporate Bank</h1>
             </div>
           </section>
       
@@ -33,35 +11,32 @@
             <div class="container">
       
               <div class="row">
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-      
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-      
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
+                    <div class="card login-layout">
+                            <div class="card-header bg-orange">
+                                <h5 class="text-white">Personal Details</h5>
+                            </div>
+                            <div class="card-body">
+                               <p>Name: XXXX</p>
+                               <p>Address: 9771 Joy Ridge Dr.<br>
+                                    Eastpointe, MI 48021</p>
+                                    <p>Email: </p>
+                                    <p>Phone:</p>
+                                    <p>PassportNumber:</p>
+                            </div>
+                        </div>
+                        <div class="card login-layout">
+                                <div class="card-header bg-orange">
+                                    <h5 class="text-white">Personal Details</h5>
+                                </div>
+                                <div class="card-body">
+                                   <p>Name: XXXX</p>
+                                   <p>Address: 9771 Joy Ridge Dr.<br>
+                                        Eastpointe, MI 48021</p>
+                                        <p>Email: </p>
+                                        <p>Phone:</p>
+                                        <p>PassportNumber:</p>
+                                </div>
+                            </div>
               </div>
       
             </div>
