--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,8 +1,10 @@
 <div class="card bg-orange mb-3">
         <div class="card-header">
             <div class="card-title">
-                <h4 class="text-white ">Corporate Bank</h4>
-               
+                <div class="row">
+                        <h4 class="text-white col-6">Corporate Bank</h4>
+                        <a routerLink="login"class="text-white col-6 text-right">Login</a>
+                </div>
             </div>
         </div>
     </div>
