added dashboard fields

--- a/src/app/core/component/dashboard/dashboard.component.html
+++ b/src/app/core/component/dashboard/dashboard.component.html
@@ -26,15 +26,13 @@
                         </div>
                         <div class="card login-layout">
                                 <div class="card-header bg-orange">
-                                    <h5 class="text-white">Personal Details</h5>
+                                    <h5 class="text-white">Account Details</h5>
                                 </div>
                                 <div class="card-body">
-                                   <p>Name: XXXX</p>
-                                   <p>Address: 9771 Joy Ridge Dr.<br>
-                                        Eastpointe, MI 48021</p>
-                                        <p>Email: </p>
-                                        <p>Phone:</p>
-                                        <p>PassportNumber:</p>
+                                   <p>Account Number: 123456789</p>
+                                   <p>Duration Of Loan: 5 years</p>
+                                        <p>Balance Amount: 1000000 </p>
+                                        <p>Monthly Rate:15%</p>
                                 </div>
                             </div>
               </div>
