added login service

--- a/src/app/core/component/dashboard/dashboard.component.html
+++ b/src/app/core/component/dashboard/dashboard.component.html
@@ -31,10 +31,22 @@
                                 <div class="card-body">
                                    <p>Account Number: 123456789</p>
                                    <p>Duration Of Loan: 5 years</p>
-                                        <p>Balance Amount: 1000000 </p>
-                                        <p>Monthly Rate:15%</p>
+                                    <p>Balance Amount: 1000000 </p>
+                                    <p>Monthly Rate:15%</p>
                                 </div>
                             </div>
+                            <div class="card login-layout">
+                                    <div class="card-header bg-orange">
+                                        <h5 class="text-white">Loan Details</h5>
+                                    </div>
+                                    <div class="card-body">
+                                       <p>Account Number: 123456789</p>
+                                       <p>Duration Of Loan: 5 years</p>
+                                        <p>Balance Amount: 1000000 </p>
+                                        <p>ROI:15%</p>
+                                        <p>EMI:26444</p>
+                                    </div>
+                                </div>
               </div>
       
             </div>
