--- a/src/app/core/component/dashboard/dashboard.component.html
+++ b/src/app/core/component/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
     <section class="jumbotron text-center">
             <div class="container">
               <h1 class="jumbotron-heading">Welcome to Corporate Bank</h1>
+              <p>{{uname}}</p>
             </div>
           </section>
       
